# veldrid-spirv

./: '  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Directory.Build.props  LICENSE  README.md  appveyor.yml  build-full-package.ps1  build-local-package.cmd  build-local-package.sh  build-native.cmd  build-native.sh  build-package.ps1  build-packages.cmd  build-packages.sh  build.cmd  build.sh  ci-build.cmd  ci-build.sh  version.json
.github/workflows/: build.yml
ext/: build-shaderc.cmd  known_good.json  sync-shaderc.cmd  sync-shaderc.sh  update_shaderc_sources.py
src/: Veldrid.SPIRV.sln
src/Veldrid.SPIRV/: CompilationOptions.cs  CompilationResult.cs  CompilationTarget.cs  ComputeCompilationResult.cs  CrossCompileInfo.cs  CrossCompileOptions.cs  CrossCompileTarget.cs  GLSLCompilationInfo.cs  GeometryCompilationResult.cs  GlslCompileInfo.cs  GlslCompileOptions.cs  InputDepthRange.cs  MacroDefinition.cs  ResourceFactoryExtensions.cs  ShaderCompilationInfo.cs  ShaderCompilationResult.cs  ShaderData.cs  ShaderSetCompilationInfo.cs  ShadercSourceLanguage.cs  SourceLanguage.cs  SpecializationConstant.cs  SpecializationList.cs  SpirvCompilation.cs  SpirvCompilationException.cs  SpirvCompilationResult.cs  SpirvReflection.cs  Util.cs  Veldrid.SPIRV.csproj  VeldridSpirvNative.cs  VertexFragmentCompilationInfo.cs
src/Veldrid.SPIRV.BuildTools/: Veldrid.SPIRV.BuildTools.csproj  Veldrid.SPIRV.BuildTools.targets
src/Veldrid.SPIRV.Tests/: CompilationTests.cs  Program.cs  ReflectionTests.cs  SerializationTests.cs  TestUtil.cs  Veldrid.SPIRV.Tests.csproj
src/Veldrid.SPIRV.Tests/TestShaders/: compile-shaders.ps1  empty.frag  empty.geom  empty.vert.spv  instance.frag  instance.frag.hlsl  instance.frag.spv  instance.vert  instance.vert.hlsl  instance.vert.spv  overlapping-resources.frag  overlapping-resources.frag.spv  overlapping-resources.vert  overlapping-resources.vert.spv  planet.frag  planet.frag.hlsl  planet.frag.spv  planet.vert.hlsl  planet.vert.spv  read-from-buffer.vert  read-from-buffer.vert.spv  simple.comp  simple.comp.spv  simple.geom  starfield.frag.hlsl  starfield.frag.spv  starfield.vert.spv  texel-fetch-no-sampler.frag  texel-fetch-no-sampler.frag.spv  uses-point-size.vert  uses-point-size.vert.spv  vertex-gen.comp  vertex-gen.comp.spv
src/Veldrid.SPIRV.VariantCompiler/: CompilationSet.cs  Program.cs  Veldrid.SPIRV.VariantCompiler.csproj
src/libveldrid-spirv/: CompilationTarget.hpp  InteropStructs.hpp  ShaderSetCompilationInfo.hpp  libveldrid-spirv.cpp  libveldrid-spirv.hpp
src/veldrid-spirv/: CompilationType.hpp  ShaderSetCompilationInfo.hpp  stdafx.cpp  veldrid-spirv.cpp  veldrid-spirv.hpp  veldrid-spirv.sln  veldrid-spirv.vcxproj  veldrid-spirv.vcxproj.filters
